--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -398,11 +398,11 @@
   <div class="divflex">
     <div class="col-sm-8" id="one">
      
-      <h2 class="res" style="color: black; font-size: 40px;font-family: 'Playfair Display', serif;">Results</h2>
-      <br> 
+      <h2 class="res" style="color: black; font-size: 30px;font-family: 'Playfair Display', serif;">Results</h2>
       <h3 id="line"> H. S. C. March 2020 results </h3>
+      <br>
 
-      <div id="ugh" style=" background-color: coral; height: 260px; overflow-y: scroll;"> 
+      <div id="ugh" style=" background-color:lightpink; height: 260px; overflow-y: scroll;"> 
       <h4 id="set">
         Science Branch 96.9%<br>
       total studenta: 
@@ -416,7 +416,7 @@
         <img class="res1" src="./img/res3.jpg" alt="">  </div>
   
        <div class="cont" style="width: 50%;"> 
-        Bhushan Vanjari 587/650 = 90.31%  
+      
         Doijod 584/650 = 89.84% in Ku.
         Ms. Saher Pathan 576/650 = 88.62%
         </div>
