--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color: #2B7A78; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #FDDB27FF; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -224,7 +224,7 @@
 </section>
 <br>
 <br>
-<section class="service">
+<section class="service" style="background-color:#00B1D2FF;">
     <h2 class="head" id="about">Our Services </h2> 
     <div class="card-body rounded-bottom">
       <div class="container">
