--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Title</title>
   <!-- MDB icon -->
@@ -105,7 +105,7 @@
   <h1 class="head">Acadmics</h1>
   <br>
   <div class="container">
-    <div class="row">
+    <div class="row ">
       <div class="col-sm">
        <!-- Card -->
        <div style="margin:5px;" class="card">
@@ -193,7 +193,7 @@
      
     </div>
     <br>
-      <div class="row">
+      <div class="row ">
       <div class="col-sm">
        <!-- Card -->
        <div style="margin:5px;" class="card">
