--- Auto-Git Commit ---

--- a/Admission.html
+++ b/Admission.html
@@ -162,22 +162,24 @@
         <div class="container">
           <div class="row">
             <div class="col-sm">
-              <button type="button" class="btn btn-secondary"><a style="color: white; font-size: 24px; border-radius:10px" href="">Query </a></button>
+              <button type="button" class="btn btn-secondary"><a style="color: white; font-size: 20px; border-radius:10px" href="">Query </a></button>
              
             </div>
             <div class="col-sm">
-              <button type="button" class="btn btn-success"><a style="color: white; font-size: 24px; border-radius:10px" href="">Query </a></button>
+              <button type="button" class="btn btn-success"><a style="color: white; font-size: 20px; border-radius:10px" href="">Online Admission </a></button>
            
             </div>
             <div class="col-sm">
-              <button type="button" class="btn btn-danger"><a style="color: white; font-size: 24px; border-radius:10px" href="">Query </a></button>
+              <button type="button" class="btn btn-danger"><a style="color: white; font-size: 20px; border-radius:10px" href="">Download Form </a></button>
             </div>
           </div>
         </div>
       </div>
 </section>
 
-</section>
+<br>
+<br>
+<br>
 
 
 
