--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -555,13 +555,13 @@ end of fourth set
       <div class="col">
         <h2 class="head" id="about">Results </h2>
         <br>
-        <div class="result-main">
+        <div class="result">
 
       <h3 style="text-align: center;"> Science Section</h3>
       <hr>
       <div style="display: flex;">
         <div>
-          <img src="./img/books.png" width="80px" height="80px" alt="">
+          <img class="res-img" src="./img/books.png"  alt=" photo">
         </div>
         <div>
           <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -570,7 +570,7 @@ end of fourth set
 
       <div style="display: flex;">
         <div>
-          <img src="./img/books.png" width="80px" height="80px" alt="">
+          <img class="res-img" src="./img/books.png"  alt=" photo">
         </div>
         <div>
           <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -579,7 +579,7 @@ end of fourth set
 
       <div style="display: flex;">
         <div>
-          <img src="./img/books.png" width="80px" height="80px" alt="">
+          <img class="res-img" src="./img/books.png"  alt=" photo">
         </div>
         <div>
           <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -590,7 +590,7 @@ end of fourth set
 <hr>
 <div style="display: flex;">
   <div>
-    <img src="./img/books.png" width="80px" height="80px" alt="">
+    <img class="res-img" src="./img/books.png"  alt=" photo">
   </div>
   <div>
     <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -599,7 +599,7 @@ end of fourth set
 
 <div style="display: flex;">
   <div>
-    <img src="./img/books.png" width="80px" height="80px" alt="">
+    <img class="res-img" src="./img/books.png"  alt=" photo">
   </div>
   <div>
     <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -608,7 +608,7 @@ end of fourth set
 
 <div style="display: flex;">
   <div>
-    <img src="./img/books.png" width="80px" height="80px" alt="">
+    <img class="res-img" src="./img/books.png"  alt=" photo">
   </div>
   <div>
     <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -618,7 +618,7 @@ end of fourth set
 <hr>
 <div style="display: flex;">
   <div>
-    <img src="./img/books.png" width="80px" height="80px" alt="">
+    <img class="res-img" src="./img/books.png"  alt=" photo">
   </div>
   <div>
     <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -627,7 +627,7 @@ end of fourth set
 
 <div style="display: flex;">
   <div>
-    <img src="./img/books.png" width="80px" height="80px" alt="">
+    <img class="res-img" src="./img/books.png"  alt=" photo">
   </div>
   <div>
     <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
@@ -636,24 +636,43 @@ end of fourth set
 
 <div style="display: flex;">
   <div>
-    <img src="./img/books.png" width="80px" height="80px" alt="">
+    <img class="res-img" src="./img/books.png"  alt=" photo">
   </div>
   <div>
     <h4 class="result-name"> Mr. Saurabh Srivastava ( 89.14% )</h4>
   </div>
 </div>
-
-
 
 
       </div>
       <br>
       
     </div>
-      <div class="col">
+      <div   class="col">
         <h2 class="head" id="about">Notice  </h2>
+        <br>
+        <div style="background-color: thistle; padding-left: 20px;">
+        <marquee width="60%" direction="up" height="350px">
+        <div class="notice-msg">
+         <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <hr>
+        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <hr>
+        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <hr>
+        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <hr>
+        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <hr>
+        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <hr>
+        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <hr>
+        </div> 
       </div>
     </div>
+    </div>
+  </marquee>
 </section>
 
 <section>
