--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color: #FDDB27FF; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #FDDB27FF;  font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -390,8 +390,7 @@
    
   </div>
 </section>
-<br>
-<br>
+
 
  <!-- <section  class="Newsec">
   
@@ -652,7 +651,7 @@ end of fourth set
         <h2 class="head" id="about">Notice  </h2>
         <br>
         <div style="background-color: thistle; padding-left: 20px;">
-        <marquee width="60%" direction="up" height="350px">
+        <marquee width="100%" direction="up" height="350px" scrollamount="2000">
         <div class="notice-msg">
          <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
@@ -674,7 +673,8 @@ end of fourth set
     </div>
   </marquee>
 </section>
-
+<br>
+<br>
 <section>
   <!-- Footer -->
 <footer style="background-color: fcf6f5ff;"  class="page-footer font-small ">
