--- a/web.html
+++ b/web.html
@@ -99,11 +99,11 @@
         <div class="col-sm-6 col-md-4">
             <div class="profile-card">
                 <div class="profile-img">
-                    <img src="https://static.pexels.com/photos/14661/pexels-photo-14661.jpeg" alt="Team Image"/>
+                    <img src="./img/face2.jpg" alt="Team Image"/>
                 </div>
                 <div class="profile-content">
-                    <h2 class="title">Henry Polles
-                        <span>Designer,Developer</span>
+                    <h2 class="title">Sushrut Kotwaliwale
+                        <span>Full Stack Developer</span>
                     </h2>
                     <ul class="social-link">
                         <li><a href="#" class="fa fa-facebook"></a></li>
@@ -117,11 +117,11 @@
         <div class="col-sm-6 col-md-4">
             <div class="profile-card">
                 <div class="profile-img">
-                    <img src="https://static.pexels.com/photos/14661/pexels-photo-14661.jpeg" alt="Team Image"/>
+                    <img src="./img/face2.jpg" alt="Team Image"/>
                 </div>
                 <div class="profile-content">
-                    <h2 class="title">Henry Polles
-                        <span>Designer,Developer</span>
+                    <h2 class="title">Sakshi Goyal
+                        <span>Frontend Developer</span>
                     </h2>
                     <ul class="social-link">
                         <li><a href="#" class="fa fa-facebook"></a></li>
@@ -135,11 +135,11 @@
         <div class="col-sm-6 col-md-4">
             <div class="profile-card">
                 <div class="profile-img">
-                    <img src="https://static.pexels.com/photos/14661/pexels-photo-14661.jpeg" alt="Team Image"/>
+                    <img src="./img/face2.jpg" alt="Team Image"/>
                 </div>
                 <div class="profile-content">
-                    <h2 class="title">Henry Polles
-                        <span>Designer,Developer</span>
+                    <h2 class="title">Saurabh Srivastava
+                        <span>Full Stack Developer</span>
                     </h2>
                     <ul class="social-link">
                         <li><a href="#" class="fa fa-facebook"></a></li>
