--- Auto-Git Commit ---

--- a/web.html
+++ b/web.html
@@ -106,10 +106,10 @@
                         <span>Full Stack Developer</span>
                     </h2>
                     <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-google"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-youtube"></a></li>
+                        <li><a href="#" class="fab fa-facebook"></a></li>
+                        <li><a href="#" class="fab fa-google"></a></li>
+                        <li><a href="#" class="fab fa-twitter"></a></li>
+                        <li><a href="#" class="fab fa-youtube"></a></li>
                     </ul>
                 </div>
             </div>
@@ -124,10 +124,10 @@
                         <span>Frontend Developer</span>
                     </h2>
                     <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-google"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-youtube"></a></li>
+                        <li><a href="#" class="fab fa-facebook"></a></li>
+                        <li><a href="#" class="fab fa-google"></a></li>
+                        <li><a href="#" class="fab fa-twitter"></a></li>
+                        <li><a href="#" class="fab fa-youtube"></a></li>
                     </ul>
                 </div>
             </div>
@@ -142,11 +142,11 @@
                         <span>Full Stack Developer</span>
                     </h2>
                     <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-google"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-youtube"></a></li>
-                    </ul>
+                      <li><a href="#" class="fab fa-facebook"></a></li>
+                      <li><a href="#" class="fab fa-google"></a></li>
+                      <li><a href="#" class="fab fa-twitter"></a></li>
+                      <li><a href="#" class="fab fa-youtube"></a></li>
+                  </ul>
                 </div>
             </div>
         </div>
