--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -224,8 +224,10 @@
 </section>
 <br>
 <br>
-<section class="service" style="background-color:#00B1D2FF;">
-    <h2 class="head" id="about">Our Services </h2> 
+<h2 class="head" id="about">Our Services </h2> 
+<br>
+<section class="service" style="background-color:#F4D03F ;">
+   
     <div class="card-body rounded-bottom">
       <div class="container">
       <!-- Grid row -->
@@ -233,16 +235,15 @@
   
         <!-- Grid column -->
         <div class="col-md">
-  
           <div class="card crdclr">
-            <div class="card-body pb-0" id="card">
-              <!-- <img class="pic" src="./img/books.png"> -->
+            <div class="card-body pb-0">
+              <!-- <img src="./img/boy-scout.png" class="pic"> -->
               <div class="ser-head"> 
-                <h3 >Library</h3>
+                <h3 >Scout-Guide</h3>
               </div >
             </div>
-           
-            <!-- <div style="text-align: justify;"  class="card-body pt-0">
+            
+            <!-- <div  style="text-align: justify;" class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div> -->
           </div>
   
@@ -650,22 +651,23 @@ end of fourth set
       <div   class="col">
         <h2 class="head" id="about">Notice  </h2>
         <br>
-        <div style="background-color: thistle; padding-left: 20px;">
-        <marquee width="100%" direction="up" height="350px" scrollamount="2000">
+        <div style="background-color: #009688 
+        ; padding-left: 20px; color: white;">
+        <marquee width="100%" direction="up" height="350px" scrollamount="10">
         <div class="notice-msg">
-         <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+         <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
-        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ab illum consequatur enim architecto tempore, reprehenderit iure at? Dolore dignissimos, itaque quas officia ratione voluptas. Cum adipisci eligendi totam laboriosam! </p>
         <hr>
-        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
-        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo animi soluta distinctio porro enim, eligendi ea, tempore repellendus temporibus nulla maxime quam quod laborum at ipsum nemo odit ad deleniti? </p>
         <hr>
-        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
-        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum asperiores pariatur nihil ratione, error fugiat velit, deleniti iusto corporis dicta accusantium aut facilis hic dignissimos. Modi reprehenderit commodi repudiandae suscipit. </p>
         <hr>
-        <p> <i style="background-color: teal; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
+        <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
         <hr>
         </div> 
       </div>
