--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -286,7 +286,7 @@
 <br>
 <h1 class="head">Facility </h1>
 <br>
-<section style="background-color: rgb(124, 198, 201);">
+<section style="background-color: rgb(124, 198, 201); color: white;">
   <div   class="faccard">
     <div>
       <h2> library  </h2>
