--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <br>
 <h2 class="head" id="about">Our Services </h2> 
 <br>
-<section class="service" style="background-color:#F4D03F ;">
+<section class="service" style="background-color:rgb(8, 130, 136)  ; ">
    
     <div class="card-body rounded-bottom">
       <div class="container">
@@ -299,7 +299,7 @@
             <div class="card-body pb-0">
               <!-- <img src="./img/goal.png" class="pic"> -->
               <div class="ser-head"> 
-                <h3 >Career Counselling</h3>
+                <h3 >Careersss Counselling</h3>
               </div >
             </div>
             
@@ -651,8 +651,8 @@ end of fourth set
       <div   class="col">
         <h2 class="head" id="about">Notice  </h2>
         <br>
-        <div style="background-color: #009688 
-        ; padding-left: 20px; color: white;">
+        <div style="background-color: #2C3E50  
+        ; padding-left: 20px; color: white; border-radius: 20px;">
         <marquee width="100%" direction="up" height="350px" scrollamount="10">
         <div class="notice-msg">
          <p> <i style="background-color: orangered; color: white; padding: 4px; border-radius: 5px;" class="fab fa-slack-hash cc_pointer"></i> hello world this is notice section from vbkc </p>
