--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <br>
 <h2 class="head" id="about">Our Services </h2> 
 <br>
-<section class="service" style="background-color:rgb(8, 130, 136)  ; ">
+<section class="service" style="background-color:#FDD835   ; box-shadow: 20px 20px 20px 40px blue; ">
    
     <div class="card-body rounded-bottom">
       <div class="container">
