--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <img class="pb-1 myi"  src="./img/flaticon/books.png" >
+              <img class="pb-3 p-4 myi"  src="./img/flaticon/exhibition.png " >
               <div class="ser-head"> 
                 <h3 >Exhibitions</h3>
               </div >
@@ -315,7 +315,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <img class="pb-1 myi"  src="./img/flaticon/books.png" >
+              <img class="p-3 myi"  src="./img/flaticon/gift.png" >
               <div class="ser-head"> 
                 <h3 >Service Before Self</h3>
               </div >
