--- a/Acadmics.html
+++ b/Acadmics.html
@@ -31,17 +31,18 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="index.html">Home
-          <span class="sr-only">(current)</span>
+         
         </a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item active dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">Academics
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="Acadmics.html"> - Academics</a>
+          <a class="dropdown-item active"  href="Acadmics.html"> - Academics</a>
+          <span class="sr-only">(current)</span>
           <a class="dropdown-item" href="BeyondAcad.html"> - Beyond Academics</a>
      
         </div>
