--- a/BeyondAcad.html
+++ b/BeyondAcad.html
@@ -31,18 +31,19 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="index.html">Home
-          <span class="sr-only">(current)</span>
+   
         </a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item active dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">Academics
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
           <a class="dropdown-item" href="Acadmics.html"> - Academics</a>
-          <a class="dropdown-item" href="Acadmics.html"> - Beyond Academics</a>
+          <a class="dropdown-item active " href="Acadmics.html"> - Beyond Academics</a>
+          <span class="sr-only">(current)</span>
      
         </div>
       </li>
@@ -151,7 +152,7 @@
   </div>
   <div   class="faccard">
     <div>
-      <h2 style="color:gold; font-weight: bold;"> Social Services  </h2>
+      <h2 style="color:gold; font-weight: bold;"> Field Visit   </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
