--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 
   <link rel="stylesheet" href="css/cards.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/acadmics.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
 </head>
-<body class="whole">
+<body >
 
   <section>
     <!--Navbar -->
@@ -106,9 +107,11 @@
   <!--Slides-->
   <div class="carousel-inner" role="listbox">
     <!--First slide-->
-  <div class="carousel-item active">
+  <div class="carousel-item active facbreadcrum">
       <img class="d-block w-100" src="img/im2.jpeg"
         alt="First slide">
+        <p style="padding: 0;" class="midle"> <img src="./img/fav.ico" alt=""> <br>  welcome to  <br> Vidharbh Buniyadi College</p>
+       
     </div>
     <!--/First slide-->
     <!--Second slide-->
