--- a/AboutUs.html
+++ b/AboutUs.html
@@ -24,7 +24,7 @@
  
   <section>
     <!--Navbar -->
-<nav style="   background-color:#990011ff; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color:#031640; font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,25 +34,26 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
         <a class="nav-link" href="index.html">Home
-          <span class="sr-only">(current)</span>
+         
         </a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item  dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">Academics
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="Acadmics.html"> - Academics</a>
-          <a class="dropdown-item" href="Acadmics.html"> - Beyond Academics</a>
+          <a class="dropdown-item "  href="Acadmics.html"> - Academics</a>
+          <span class="sr-only">(current)</span>
+          <a class="dropdown-item" href="BeyondAcad.html"> - Beyond Academics</a>
      
         </div>
       </li>
       <li class="nav-item active dropdown">
-        <a class="nav-link  dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">About Us
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="AboutUs.html"> - About US</a>
+          <a class="dropdown-item active " href="AboutUs.html"> - About US</a>
           <a class="dropdown-item" href="AboutUs.html"> - Vission & Mission</a>
           <a class="dropdown-item" href="AboutUs.html"> - Director's Message</a>
           <a class="dropdown-item" href="AboutUs.html"> - Alumni</a>
@@ -86,6 +87,7 @@
 </nav>
 <!--/.Navbar -->
   </section>
+
 <br>
 <br>
 <section  >
@@ -94,7 +96,7 @@
   <div class="midle">
     <p> About us <br>
     <span class="ob">
-    <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">About US</a></span>
+    <a style="color: orangered;" href="">Home</a> / <a  style="color: orangered;" href="">About US</a></span>
   </p>
   </div>
 </div>
