--- a/Admission.html
+++ b/Admission.html
@@ -23,7 +23,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color:#990011ff; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color:#031640; font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,27 +31,28 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="index.html">Home
-          <span class="sr-only">(current)</span>
+         
         </a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item  dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">Academics
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="Acadmics.html"> - Academics</a>
-          <a class="dropdown-item" href="Acadmics.html"> - Beyond Academics</a>
+          <a class="dropdown-item "  href="Acadmics.html"> - Academics</a>
+          <span class="sr-only">(current)</span>
+          <a class="dropdown-item" href="BeyondAcad.html"> - Beyond Academics</a>
      
         </div>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item  dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">About Us
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="AboutUs.html"> - About US</a>
+          <a class="dropdown-item  " href="AboutUs.html"> - About US</a>
           <a class="dropdown-item" href="AboutUs.html"> - Vission & Mission</a>
           <a class="dropdown-item" href="AboutUs.html"> - Director's Message</a>
           <a class="dropdown-item" href="AboutUs.html"> - Alumni</a>
@@ -60,10 +61,10 @@
       <li class="nav-item">
         <a class="nav-link" href="Faculty.html">Our Team</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="Admission.html">Admission</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item  ">
         <a class="nav-link" href="Gallery.html"> Gallery</a>
       </li>
       <li class="nav-item">
@@ -85,6 +86,7 @@
 </nav>
 <!--/.Navbar -->
   </section>
+
   <br>
   <br>
 
