--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <link rel="stylesheet" href="css/cards.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/acadmics.css">
+
   <link rel="stylesheet" href="css/crouselcounter.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
@@ -110,7 +110,7 @@
   <div class="carousel-item active facbreadcrum">
       <img class="d-block w-100" src="img/im2.jpeg"
         alt="First slide">
-        <p style="padding: 0;" class="midle"> <img src="./img/fav.ico" alt=""> <br>  welcome to  <br> Vidharbh Buniyadi College</p>
+        <p style="padding: 0;" class="midle"> <img class="slider-logo" src="./img/fav.ico" width="200px" height="200px" alt=""> <br>  welcome to  <br> Vidharbh Buniyadi School <br> and Junior  College</p>
        
     </div>
     <!--/First slide-->
