--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -115,15 +115,19 @@
     </div>
     <!--/First slide-->
     <!--Second slide-->
-    <div class="carousel-item">
+    <div class="carousel-item  facbreadcrum">
       <img class="d-block w-100" src="img/im3.jpeg"
         alt="Second slide">
+        <p style="padding: 0;" class="midle"> <img class="slider-logo" src="./img/fav.ico" width="200px" height="200px" alt=""> <br>  welcome to  <br> Vidharbh Buniyadi School <br> and Junior  College</p>
+       
     </div>
     <!--/Second slide-->
     <!--Third slide-->
-    <div class="carousel-item">
+    <div class="carousel-item  facbreadcrum">
       <img class="d-block w-100" src="img/WhatsApp Image 2020-07-25 at 4.09.02 PM.jpeg"
         alt="Third slide">
+        <p style="padding: 0;" class="midle"> <img class="slider-logo" src="./img/fav.ico" width="200px" height="200px" alt=""> <br>  welcome to  <br> Vidharbh Buniyadi School <br> and Junior  College</p>
+       
     </div>
     <!--/Third slide-->
   </div>
