--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="col-md">
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <img class="pb-1 myi"  src="./img/flaticon/books.png" >
+              <img class="pb-1 myi"  src="./img/flaticon/road.png" >
               <div class="ser-head"> 
                 <h3 >RSP logo</h3>
               </div >
@@ -304,7 +304,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <img class="pb-1 myi"  src="./img/flaticon/books.png" >
+              <img class="pb-1 myi"  src="./img/flaticon/advice.png" >
               <div class="ser-head"> 
                 <h3 >Career Counselling</h3>
               </div >
@@ -339,7 +339,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <img class="pb-1 myi"  src="./img/flaticon/meditation.png" >
+              <img class="pb-1 myi"  src="./img/flaticon/professions-and-jobs.png" >
               <div class="ser-head"> 
                 <h3 >Fire Evacuation Drill</h3>
               </div >
