--- a/Faculty.html
+++ b/Faculty.html
@@ -97,7 +97,7 @@
 <section  >
   <div  class="facbreadcrum" >
   <img   class="facbread"  src="./img/faculty 1.png" alt="" width="100%" >
-  <div class="midle">
+  <div class="middle">
     <p>  Faculty  <br>
     <span class="ob">
     <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Faculty</a></span>
