--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -133,7 +133,7 @@
 <h1 class="head">Directors Message</h1>
 <Section class="ds-msg">
   <div>
-  <img class="ds-img" src="./img/face2.jpg"  >
+  <img class="ds-img" src="./img/president.jpg"  >
 </div>
 <div>
 <p class="para para2"> Mr. Saurabh Srivastava <br> (frnt end Developer) <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
@@ -146,7 +146,7 @@
 <div>
 <p class="para para2"> Mr. Saurabh Srivastava <br> (frnt end Developer) <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
 <div>
-  <img class="ds-img" src="./img/face2.jpg"  >
+  <img class="ds-img" src="./img/principl.jpg"  >
 </div>
 </Section>
 <br>
