--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -136,7 +136,9 @@
   <img class="ds-img" src="./img/president.jpg"  >
 </div>
 <div>
-<p class="para para2"> Mr. Saurabh Srivastava <br> (frnt end Developer) <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
+<p class="para para2"> We are passionate to educate children to stimulate their process of thinking and discrimination with scientific temperament, enhance their love for nation and honour for women through a teacher having positive attitude to inculcate value education, innovative approach with global relevance and academic excellence. This helps in grooming the personality, character and competitive attitude of a student who can actively balance between rights and duties as a future responsible citizen of India with national values. <br> In view of all these academic backgrounds our School ranked higher grade as per norms of assessment by Govt education department.
+  A journey of a thousand miles begins with a single step. We all at Sevadal Education Society, together pledge to make a change.
+    <br><span style="float: right;" > saurabh srivastava </span> <br> <span style="float: right;" > principal </span></p>  </div>
 </Section>
 <br>
 <br>
@@ -144,7 +146,10 @@
 <Section class="ds-msg">
   
 <div>
-<p class="para para2"> Mr. Saurabh Srivastava <br> (frnt end Developer) <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
+<p class="para para2"> Dear Students and Parents, <br>
+   “Teachers must have three loves: love of learning, love of learners and love of bringing first two loves together”. Scott Hayden. <br> 
+  Vidarbha Buniyadi High school and Jr. College’s mission is to provide such an education, considering the fact that each student is different, as a person and as a learner. We believe that effective learning and teaching can be built under a shared spirit of respect among Management, Teachers, Students and Parents. Our curriculum and practices are constantly reviewed to confirm that we are following the most updated technologies, best practices, meeting all regulations, and addressing the future needs of our students. 
+  !   <br><span style="float: right;" > saurabh srivastava </span> <br> <span style="float: right;" > principal </span></p>  </div>
 <div>
   <img class="ds-img" src="./img/principl.jpg"  >
 </div>
