--- a/yoga.html
+++ b/yoga.html
@@ -16,12 +16,11 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="css/aboutus.css">
-  <link rel="stylesheet" href="css/crouselcounter.css">
+  <link rel="stylesheet" href="css/services.css">
+
 </head>
 <body>
 
- 
   <section>
     <!--Navbar -->
 <nav style="   background-color:#031640; font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
@@ -48,12 +47,12 @@
      
         </div>
       </li>
-      <li class="nav-item active dropdown">
+      <li class="nav-item  dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">About Us
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item active " href="AboutUs.html"> - About US</a>
+          <a class="dropdown-item  " href="AboutUs.html"> - About US</a>
           <a class="dropdown-item" href="AboutUs.html"> - Vission & Mission</a>
           <a class="dropdown-item" href="AboutUs.html"> - Director's Message</a>
           <a class="dropdown-item" href="AboutUs.html"> - Alumni</a>
@@ -62,10 +61,10 @@
       <li class="nav-item">
         <a class="nav-link" href="Faculty.html">Our Team</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="Admission.html">Admission</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item  ">
         <a class="nav-link" href="Gallery.html"> Gallery</a>
       </li>
       <li class="nav-item">
@@ -88,81 +87,53 @@
 <!--/.Navbar -->
   </section>
 
-<br>
-<br>
-<section  >
-  <div  class="facbreadcrum" >
-  <img   class="facbread"  src="./img/About us.png" alt="" width="100%" >
-  <div class="midle">
-    <p> About us <br>
-    <span class="ob">
-    <a style="color: orangered;" href="">Home</a> / <a  style="color: orangered;" href="">About US</a></span>
-  </p>
-  </div>
-</div>
-</section>
-<br>
-<br>
+  <br>
+  <br>
 
-<section>
-  <h1 class="head">About Sevadal</h1>
-  <div>
-    <p class="abutdal">  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
-</section>
-<section>
-  <h1 class="head">Vission & Mission</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <div class="vision">
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni obcaecati nemo dolor neque ipsam ad saepe. Magni iste quam enim? Sunt laboriosam quae nobis magnam non modi sint voluptate sed. <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati excepturi atque hic similique eveniet sit reprehenderit ea eos optio, quis sapiente minima nisi voluptate iusto? Modi ut molestias vel temporibus!</p>
-        </div>
-      </div>
-      <div class="col-sm">
-          <div class="mission">
-            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni obcaecati nemo dolor neque ipsam ad saepe. Magni iste quam enim? Sunt laboriosam quae nobis magnam non modi sint voluptate sed. <br>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati excepturi atque hic similique eveniet sit reprehenderit ea eos optio, quis sapiente minima nisi voluptate iusto? Modi ut molestias vel temporibus! </p>
-        </div>
-      </div>
-      
+  <section  >
+    <div  class="facbreadcrum" >
+    <img   class="facbread"  src="./img/Academics 3.png" alt="" width="100%" >
+    <div class="midle">
+      <p> Admission <br>
+      <span class="ob">
+      <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Services</a></span>
+    </p>
     </div>
   </div>
+  </section>
+<section>
+
+<br>
+<br>
+<section>
+    <h2 class="ser-heading">   <img src="./img/flaticon/meditation.png"> <br>  Yoga 
+  </h2>
+    <p class="paras"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus mollitia laudantium impedit molestias ipsam earum debitis voluptas eius, suscipit ullam, placeat at dolorum ad, ipsa assumenda fuga excepturi eveniet rem? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dignissimos iste illum qui ipsa ducimus impedit iure sit! Saepe tempora officia eligendi obcaecati harum. Itaque dolorem assumenda obcaecati ipsam magnam. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate eveniet enim qui totam odio? Ratione sint reiciendis eum tenetur vel fugit eaque dolor facilis? Voluptate necessitatibus deserunt possimus animi commodi?</p>
+
+</section>
+<section>
+    <h2 class="ser-heading"> Some Images</h2>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm ">
+           <img src="./img/principl.jpg" width="270px" >
+          </div>
+          <div class="col-sm">
+           <img src="./img/principl.jpg" width="270px" >
+          </div>
+          <div class="col-sm">
+           <img src="./img/principl.jpg" width="270px" >
+          </div>
+          <div class="col-sm">
+           <img src="./img/principl.jpg" width="270px" >
+          </div>
+        </div>
+      </div>
 </section>
 <br>
-<br>
-<h1 class="head">Directors Message</h1>
-<section style="background-color: rgb(221, 221, 255);">
-<div class="ds-msg">
-  <div>
-  <img class="ds-img" src="./img/president.jpg"  >
-</div>
-<div>
-<p class="para para2"> We are passionate to educate children to stimulate their process of thinking and discrimination with scientific temperament, enhance their love for nation and honour for women through a teacher having positive attitude to inculcate value education, innovative approach with global relevance and academic excellence. This helps in grooming the personality, character and competitive attitude of a student who can actively balance between rights and duties as a future responsible citizen of India with national values. <br> The institution is situated at a huge campus of 2 acres having various departments with state of art infrastructure, laboratories including well equiped computer Laboratory, rich library, language lab with modern teaching aids, huge play ground and amenities. 
-    <br><span style="float: right;" > saurabh srivastava </span> <br> <span style="float: right;" > principal </span></p>  </div>
-</div>
-
-<hr>
-
-<div class="ds-msg">
-  <hr> 
-<div>
-<p class="para para2"> Dear Students and Parents, <br>
-   “Teachers must have three loves: love of learning, love of learners and love of bringing first two loves together”. Scott Hayden. <br> 
-  Vidarbha Buniyadi High school and Jr. College’s mission is to provide such an education, considering the fact that each student is different, as a person and as a learner. We believe that effective learning and teaching can be built under a shared spirit of respect among Management, Teachers, Students and Parents. Our curriculum and practices are constantly reviewed to confirm that we are following the most updated technologies, best practices, meeting all regulations, and addressing the future needs of our students. 
-  !   <br><span style="float: right;" > saurabh srivastava </span> <br> <span style="float: right;" > principal </span></p>  </div>
-<div>
-  <img class="ds-img" src="./img/principl.jpg"  >
-</div>
-</div>
-<br>
-<br>
-<div>
-</section>
-  <h1 class="head">Alumini</h1>
-</div>
 <section>
   <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
+<footer class="page-footer font-small blue-grey lighten-5">
 
   <div style="background-color: #21d192;">
     <div class="container">
