--- Auto-Git Commit ---

--- a/Gallery.html
+++ b/Gallery.html
@@ -110,34 +110,34 @@
 <div class="album-row">
     <div class="imgs">
         <div>
-            <img src="./img/person_1.jpg"  width="310px" >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
-        <div class="album-name">
-            <p> name of album</p>
+        <div class="album-name" >
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
         <div>
-            <img src="./img/person_4.jpg" width="310px"   >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> name of album</p>
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
         <div>
-            <img src="./img/person_4.jpg" width="310px"  >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> name of album</p>
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
         <div>
-            <img src="./img/person_4.jpg" width="310px"   >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> name of album</p>
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
 </div>
@@ -146,37 +146,76 @@
 <div class="album-row">
     <div class="imgs">
         <div>
-            <img src="./img/person_1.jpg"  width="310px" >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> name of album</p>
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
         <div>
-            <img src="./img/person_4.jpg" width="310px"   >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> name of album</p>
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
         <div>
-            <img src="./img/person_4.jpg" width="310px"  >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> name of album</p>
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
         <div>
-            <img src="./img/person_4.jpg" width="310px"   >
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> name of album</p>
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
 </div>
+<br>
+<br>
+
+
+<div class="album-row">
+    <div class="imgs">
+        <div>
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
+        </div>
+        <div class="album-name" >
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+        </div>
+    </div>
+    <div class="imgs">
+        <div>
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
+        </div>
+        <div class="album-name" >
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+        </div>
+    </div>
+    <div class="imgs">
+        <div>
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
+        </div>
+        <div class="album-name" >
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+        </div>
+    </div>
+    <div class="imgs">
+        <div>
+         <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
+        </div>
+        <div class="album-name" >
+            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+        </div>
+    </div>
+</div>
+
 
    </div>
  
