--- a/Gallery.html
+++ b/Gallery.html
@@ -113,7 +113,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -121,7 +121,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -129,7 +129,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -137,7 +137,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
 </div>
@@ -149,7 +149,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -157,7 +157,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -165,7 +165,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -173,7 +173,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
 </div>
@@ -187,7 +187,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -195,7 +195,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -203,7 +203,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
     <div class="imgs">
@@ -211,7 +211,7 @@
          <a href="">   <img class="imgani" src="./img/person_4.jpg" width="310px"   > </a>
         </div>
         <div class="album-name" >
-            <p> <a  style="color: azure;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
+            <p> <a  style="color:white;" href="">name of album <span class="link"><i class="fas fa-link"></i></span> </a> </p>
         </div>
     </div>
 </div>
