--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -229,7 +229,7 @@
             <li class="list-inline-item"><button type="button" class="btn btn-primary">Primary</button></li>
           </ul> -->
           <ul style=" margin-left: -38px; list-style: none; display: flex; justify-content: space-around">
-            <li> <button type="button" class="btn btn-primary">Know More</button> </li>
+            <li> <button type="button" class="btn btn-primary"> <a style="color: white;" href="a1.html">  Know More  </a> </button> </li>
             <li> <button type="button" class="btn btn-success">Adimmision</button></li>
           </ul>
         </div>
